2016-11-07 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-560

	* Revision of scatterig media descriptions.

	* doc/uguide/clouds.tex, atmosphere.tex:
	Revision of scat_data and pnd_field documentation, extention towards
	internal calculation of both (not yet complete,	though).

	* doc/uguide/rte_theory.tex, doc/uguide/Figs/rte_theory/part_frame.pdf:
	Moved coordinate system description and figure from AUG to here.

	* doc/uguide/clouds_theory.tex, arts_theory.tex:
	Moved general size distribution descriptions here.

	* doc/uguide/absorption.tex: Updated zeeman paper reference.

	* doc/uguide/rte_basics.tex, symbol_defs.tex: Minor changes.

2016-11-07  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-559
	
	* src/{m_,}zeeman.cc:  Fix bugs introduced to speed things up
	
	* src/pressurebroadeningdata.{cc,h}:  Initial support for speed-dependent
	limit pressurebroadening in ARTSCAT5.  Still very much in testing.  Seems to
	work but it is not easy to find data/input.  Ask me if you have a use case.
	
	* src/rte.{h,cc}:  Fix for zero wind-fields.  Note that there is an abs()-
	call that might not be necessary.  There should be a normalization to -1/c,
	so the three components inside the switch needs to normalize to 1 and be
	positive
	
2016-11-07  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-558

	* src/optproperties.cc (pha_mat_labCalc): Replaced some asserts
	with a run_time error. Added also check of element (0,0).

	The idea to replace a few asserts with runtime error is to allow
	MC calculations to continue if these errors appear, and to give
	out an error message with information about what to do if an user
	stumbles upon these errors.

2016-11-06 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-557

	* src/m_optproperties.cc, methods.cc (TestScatDataInterp):
	Extented to emulate RT4 ssd extraction (not exactly te same though, as
	RT4 does not need individial inc/sca direction extraction and allow for