@@ -845,6 +845,15 @@ void opt_propExtract(
 
   case PTYPE_GENERAL:
     {
+      /*
+         TO ANY DEVELOPER:
+         current usage of coordinate systems in scattering solvers (RT and SSD
+         extraction) and general radiative transfer is not consistent. Not an
+         as long as only PTYPE_MACROS_ISO and PTYPE_HORIZ_AL, but will be a
+         problem for PTYPE_GENERAL, ie needs to be fixed BEFORE adding
+         PTYPE_GENERAL support (see AUG appendix for more info).
+      */
+
       // This is only included to remove warnings about unused variables 
       // during compilation
       CREATE_OUT0;
@@ -1095,6 +1104,15 @@ void pha_mat_singleExtract(
 
     case PTYPE_GENERAL:
     {
+      /*
+         TO ANY DEVELOPER:
+         current usage of coordinate systems in scattering solvers (RT and SSD
+         extraction) and general radiative transfer is not consistent. Not an
+         as long as only PTYPE_MACROS_ISO and PTYPE_HORIZ_AL, but will be a
+         problem for PTYPE_GENERAL, ie needs to be fixed BEFORE adding
+         PTYPE_GENERAL support (see AUG appendix for more info).
+      */
+
       // to remove warnings during compilation.
       CREATE_OUT0;
       out0 << "Case PTYPE_GENERAL not yet implemented. \n"; 
